<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="16dp"
    android:orientation="horizontal"
    android:singleLine="true">

    <TextView
        android:id="@+id/create_key_email_item_email"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:text="alice@example.com"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingLeft="8dp" />

    <ImageButton
        android:id="@+id/create_key_email_item_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:src="@drawable/ic_close_grey_24dp"
        android:layout_gravity="center_vertical"
        android:background="?android:selectableItemBackground" />

</LinearLayout>
