<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/wizard_activity_margin"
                android:paddingBottom="48dp"
                android:persistentDrawingCache="all">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/emailWizardFragmentTip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_key_email_text"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <org.sufficientlysecure.keychain.ui.widget.EmailEditText
                android:id="@+id/create_key_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailWizardFragmentTip"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/label_email"
                android:imeOptions="actionDone"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/create_key_emails"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/create_key_email"
                android:scrollbars="vertical"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>