<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_key_add_email_text"
        android:textAppearance="?android:textAppearanceMedium" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/label_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
