<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_above="@+id/create_key_buttons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/create_key_passphrase_text" />

            <org.sufficientlysecure.keychain.ui.widget.PassphraseEditText
                android:id="@+id/create_key_passphrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:hint="@string/label_passphrase"
                android:ems="10"
                android:layout_gravity="center_horizontal"
                />

            <EditText
                android:id="@+id/create_key_passphrase_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:inputType="textPassword"
                android:hint="@string/label_passphrase_again"
                android:ems="10"
                android:layout_gravity="center_horizontal" />

            <CheckBox
                android:id="@+id/create_key_show_passphrase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/label_show_passphrase" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="?attr/colorButtonRow"
        android:id="@+id/create_key_buttons">

        <TextView
            android:id="@+id/create_key_back_button"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/btn_back"
            android:textAllCaps="true"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:drawableLeft="@drawable/ic_chevron_left_grey_24dp"
            android:drawablePadding="8dp"
            android:gravity="left|center_vertical"
            android:clickable="true"
            style="?android:attr/borderlessButtonStyle" />

        <TextView
            android:id="@+id/create_key_next_button"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/btn_next"
            android:textAllCaps="true"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:drawableRight="@drawable/ic_chevron_right_grey_24dp"
            android:drawablePadding="8dp"
            android:gravity="right|center_vertical"
            android:clickable="true"
            style="?android:attr/borderlessButtonStyle" />
    </LinearLayout>
</RelativeLayout>
